--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
+		"sass": "^1.72.0",
 		"svelte": "^4.2.7",
 		"tailwindcss": "^3.4.3",
 		"vite": "^5.0.3"
